<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorA"
    tools:context="com.example.osos.myapplication.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settingsImage"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:src="@drawable/ma"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="55dp" />


    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsImage"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/display_name"
        android:textColor="#ffffff"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/settings_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_display_name"
        android:layout_margin="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/hi_i_m_use_mido_chat"
        android:textColor="#ffffff"
        android:textSize="18sp" />


    <Button
        android:id="@+id/settings_status_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/message_text_background"
        android:text="@string/change_status"
        android:textColor="#ffffff"
        android:layout_marginBottom="15dp"
        android:textSize="24sp"
        android:layout_above="@+id/settings_image_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/settings_image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:background="@drawable/message_text_background"
        android:text="@string/change_image"
        android:layout_alignParentBottom="true"
        android:textColor="#ffffff"
        android:textSize="24sp" />


</RelativeLayout>
